--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,30 +1,27 @@
-name: pytest
+name: UI Tests
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
 
 jobs:
-  test:
+  ui-tests:
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ "3.11" ]
+    env:
+      SAUCE_BASE_URL: ${{ secrets.SAUCE_BASE_URL }}
+      SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
+      SAUCE_PASSWORD: ${{ secrets.SAUCE_PASSWORD }}
+      BROWSER: firefox
+      HEADLESS: true
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: "pip"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
@@ -32,10 +29,5 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        env:
-          # Add any required env vars here (or use GitHub Secrets)
-          # EXAMPLE: BASE_URL: ${{ secrets.BASE_URL }}
-          PYTHONPATH: .
         run: |
-          pytest -q
-
+          pytest -m ui
